--- a/confere_vendas/nbproject/project.properties
+++ b/confere_vendas/nbproject/project.properties
@@ -101,6 +101,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
